# mteam_search

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/: mteam-search.md
scripts/: __main__.py  api.py
src/mteam_search/: __init__.py  cli.py
